tests/ext/invalid/ListSublist_CompileFail_2.whiley


void ::main(System.Console sys):
    list = [1,2,3]
    sublist = list[1..4]
    debug Any.toString(list)
    debug Any.toString(sublist)
